--- a/css/experiencia.css
+++ b/css/experiencia.css
@@ -139,8 +139,31 @@ color: #e0986e;
     font-size: 1rem;
     margin-top: 50px;
   }
-   
-
-    
-    
+}
+@media (max-width: 585px){
+  .experiencia .subtitulo{
+    text-align: center;
+    margin-left: 17px;
   }
+}
+@media (max-width: 500px){
+  .experiencia .subtitulo{
+    text-align: center;
+    margin-left: 0px;
+  }
+}
+@media (max-width: 440px){
+  .experiencia .subtitulo{
+    text-align: center;
+    font-size: 4rem;
+    margin-left: -20px;
+    align-content: left;
+    margin-top: 46px;
+  }
+  .experiencia-texto{
+    font-size: 1rem;
+    line-height: 1;
+    max-width: 20ch;
+    margin-bottom: 60px;
+  }
+}
