--- a/css/introducao.css
+++ b/css/introducao.css
@@ -65,8 +65,9 @@
    font-size: 3rem;
   }
   .introducao h1::before{
-    width: 90px;
+    width: 80px;
     height: 3px;
+
   }
   .introducao p{
     font-size: 1.2rem;
@@ -86,17 +87,19 @@
 @media (max-width: 440px) {
   .introducao {
     grid-template-columns: 1fr ;
-    align-items: center;
     margin-top: -20px;
+    text-align: center;
   }
   .introducao img{
     height: 19rem;
     width: 15rem;
-    content: right;
+  
 
     }
     .introducao h1 {
       font-size: 1.7rem;
+      
+    
 
     }
     .introducao p {
@@ -109,8 +112,10 @@
       font-size: 0.9rem;
     }
     .introducao h1::before{
-      width: 80px;
-      height: 3px;
-
+      width: 40px;
+      height: 2px;
+      top: 10px;
+      left: 43px;
+      transform: rotate(-45deg)
     }
 }
